--- a/4-1 Logistic Regression(Theory01).ipynb
+++ b/4-1 Logistic Regression(Theory01).ipynb
@@ -468,13 +468,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "当$\\Delta{x}\\rightarrow 0$时:\n",
+    "当$\\nabla{x}\\rightarrow 0$时:\n",
     "\n",
     "$f'(x)+\\Delta{x}f''(x)\\cong 0$\n",
     "\n",
     "$\\Rightarrow $\n",
     "\n",
-    "$\\Delta{x}=-\\frac{f'(x)}{f''(x)}$"
+    "$\\nabla{x}=-\\frac{f'(x)}{f''(x)}$"
    ]
   },
   {
