add MLE+GA in LR

--- a/4-1 Logistic Regression(Theory01).ipynb
+++ b/4-1 Logistic Regression(Theory01).ipynb
@@ -132,20 +132,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "设$\\hat{y}$为预测值:\n",
+    "对于某个样本$(x_i,y_i)$设$\\hat{y_i}$为预测值:\n",
     "\n",
-    "if $Y=1$: $ P(Y=1|X)= \\hat{y}$\n",
+    "定义:\n",
     "\n",
-    "if $Y=0$: $ P(Y=0|X)= 1- \\hat{y}$\n"
+    "if $y_i=1$: $ P(y_i=1|X)= \\hat{y_i}$\n",
+    "\n",
+    "if $y_i=0$: $ P(y_i=0|X)= 1- \\hat{y_i}$\n",
+    "\n",
+    "那么其联合分布为$P(x_i,y_i)=[\\hat{y_i}]^{y_i}\\cdot[1-\\hat{y_i}]^{1-y_i}$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "整合这两种情况就可以得到似然函数:\n",
+    "所以,整体样本的似然函数为:\n",
     "\n",
-    "$\\prod_{i=1}^{N}[\\hat{y_i}]^{y_i}\\cdot[1-\\hat{y_i}]^{1-y_i}$"
+    "$L(\\theta)=\\prod_{i=1}^{N}P(x_i,y_i)=\\prod_{i=1}^{N}[\\hat{y_i}]^{y_i}\\cdot[1-\\hat{y_i}]^{1-y_i},\\theta:{W,b}$"
    ]
   },
   {
@@ -163,7 +167,7 @@
    "source": [
     "那么对$L(W,b)$求极大就可以得到其估计值.由于目标是无法直接求出解析解.但是它是高阶连续可微的凸函数(似然函数为指数的product).所以可以使用迭代法,实际上[求优化目标](https://tminka.github.io/papers/logreg/minka-logreg.pdf)的方法都是大同小异,就是找到一个方向,然后朝着这个方向去迭代去逼近最优的参数值,使得似然函数能够减小.\n",
     "\n",
-    "迭代的方式这里主要讲2种:梯度下降法(GD,SGD),拟牛顿法(BFGS)"
+    "迭代的方式这里主要讲3种:梯度上升法(MLE+GA),梯度下降法(loss+GD,SGD),拟牛顿法(BFGS)"
    ]
   },
   {
@@ -171,8 +175,40 @@
    "metadata": {},
    "source": [
     "### 3 求解最优参数\n",
+    "#### 3.0 MLE+GA\n",
     "\n",
-    "#### 3.1 损失函数\n",
+    "对于对数似然函数,我们的目标是极大$\\theta$.\n",
+    "\n",
+    "故:\n",
+    "\n",
+    "$dw_i=\\frac{\\partial loss(w_i,b_i)}{\\partial w_i} = \\frac{\\partial loss(w_i,b_i)}{\\partial \\hat{y_i}} \\cdot \\frac{\\partial \\hat{y_i}}{\\partial z_i}\\cdot \\frac{\\partial z_i}{\\partial w_i}$\n",
+    "\n",
+    "上式称为链式法则,因为我们要更新的参数$w_i$实际上是在$z_i$内,但是$z_i$又与$\\hat{y_i}$有关且$\\hat{y_i}$又与$loss(w_i,b_i)$有关,就像一条链子连着.\n",
+    "\n",
+    "所以我们只要分别求出链式中的各项就可以得到$w_i$\n",
+    "\n",
+    "先计算$\\frac{\\partial loss(w_i,b_i)}{\\partial \\hat{y_i}} = (\\frac{y_i}{\\hat{y_i}})-(\\frac{1-y_i}{1-\\hat{y_i}})$\n",
+    "\n",
+    "在计算$\\frac{\\partial \\hat{y_i}}{\\partial z_i} = \\hat{y_i}(1-\\hat{y_i})$ 也就是sigmoid的导数.\n",
+    "\n",
+    "最后计算$\\frac{\\partial z_i}{\\partial w_i}=x_i$\n",
+    "\n",
+    "那么使用梯度上升法,即可得产生迭代跟新.\n",
+    "\n",
+    "所以$dw_i=x_i(y_i-\\hat{y_i})$\n",
+    "\n",
+    "同样对于参数$b_i$:\n",
+    "\n",
+    "$db_i=\\hat{y_i}-y_i$\n",
+    "\n",
+    "\n",
+    "于是参数更新与如下形式:\n",
+    "\n",
+    "$w_i=w_i + \\alpha \\cdot dw_i,b_i=b_i+\\alpha \\cdot db_i$\n",
+    "\n",
+    "那么梯度上升法为什么能够使得$W,b$拟合到最优值呢,先让我们看看什么叫GD后一起来分析.\n",
+    "\n",
+    "#### 3.1 loss+GD\n",
     "\n",
     "损失函数的定义为:\n",
     "\n",
@@ -262,6 +298,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "那么使用梯度下降法,即可得产生迭代跟新.\n",
+    "\n",
     "所以$dw_i=x_i(a_i-y_i)$"
    ]
   },
@@ -310,38 +348,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Ps:**\n",
-    "\n",
-    "- 由于算法是同时针对$N$组样本的,所以:\n",
-    "\n",
-    "    - $dW=\\frac{1}{m}\\cdot X(A-Y)$\n",
-    "\n",
-    "    - $db = \\frac{1}{m}\\cdot (A-Y)$\n",
-    "\n",
-    "    - 来缩放一下梯度值.\n",
-    "\n",
-    "\n",
-    "\n",
-    "- 这里的梯度步长$\\alpha$在神经网络中叫做学习率\n",
-    "\n",
-    "\n",
-    "- 除了梯度下降法还有与之相同的叫梯度上升法(Gradient Ascent)\n",
-    "    - GA和DG的道理都是一样的,GA的定义是loss函数没有负号(等同于极大似然),最后算出$dW$的结果是$(Y-A)$.\n",
-    "    - 更新参数定义为:$W=W+\\alpha \\cdot dW$\n",
-    "    - 可以看出sigmoid的结果值$A$:\n",
-    "        - if $A<Y$,\n",
-    "            - GD:$dW < 0$,$W$增大.\n",
-    "            - GA:$dW >0$,$W$增大.\n",
-    "        - if $A>Y$,\n",
-    "            - GD:$dW > 0$,$W$减小.\n",
-    "            - GA:$dW < 0$,$W$减小.\n",
-    "    - 因为我们习惯上会希望loss在迭代的过程中变小,所以我们更加习惯使用GD."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 3.2.3直观理解GD\n",
     "\n",
     "为什么GD能够在迭代过程中逐渐逼近真实值呢?\n",
@@ -361,7 +367,34 @@
     "\n",
     "(2) 如果检测样本是属于(Y=1,也就是蓝色的部分),那么最优的$w$也是属于蓝色的,因为$(A-Y)$为负,更新值$W$会增加,随着迭代逐步逼近蓝色的范围,直到$A$与$Y$极为接近,则$W$更新无变化.\n",
     "\n",
-    "(3) 另外也可以看出初始值的选择不可过大,如果过大或过小,将会进入平缓地带,那么梯度就会下降的十分缓慢."
+    "(3) 另外也可以看出初始值的选择不可过大,如果过大或过小,将会进入平缓地带,那么梯度就会下降的十分缓慢.\n",
+    "\n",
+    "**Ps:**\n",
+    "\n",
+    "- 由于算法是同时针对$N$组样本的,所以:\n",
+    "\n",
+    "    - $dW=\\frac{1}{m}\\cdot X(A-Y)$\n",
+    "\n",
+    "    - $db = \\frac{1}{m}\\cdot (A-Y)$\n",
+    "\n",
+    "    - 来缩放一下梯度值.\n",
+    "\n",
+    "\n",
+    "\n",
+    "- 这里的梯度步长$\\alpha$在神经网络中叫做学习率\n",
+    "\n",
+    "\n",
+    "- 梯度上升法(Gradient Ascent)\n",
+    "    - GA和DG的道理都是一样的,GA的定义是极大似然,最后算出$dW$的结果是$(Y-A)$.\n",
+    "    - 更新参数定义为:$W=W+\\alpha \\cdot dW$\n",
+    "    - 可以看出sigmoid的结果值$A$:\n",
+    "        - if $A<Y$,\n",
+    "            - GD:$dW < 0$,$W$增大.\n",
+    "            - GA:$dW >0$,$W$增大.\n",
+    "        - if $A>Y$,\n",
+    "            - GD:$dW > 0$,$W$减小.\n",
+    "            - GA:$dW < 0$,$W$减小.\n",
+    "    - 因为我们习惯上会希望loss在迭代的过程中变小,所以我们更加习惯使用GD."
    ]
   },
   {
