--- a/4-2 Logistic Regression(Theory02).ipynb
+++ b/4-2 Logistic Regression(Theory02).ipynb
@@ -236,6 +236,8 @@
     "\n",
     "LR loss(single sample):\n",
     "\n",
+    "这里我们为了处理方便将$L_2$范数取平方(平方并不更改几何形状)即:$||w_i||_{2}=(||w_i||_{2}^\\frac{1}{2})^2$\n",
+    "\n",
     "$loss(w,b) = -[y_ilog(\\hat{y_i})+(1-y_i)log(1-\\hat{y_i})] + \\frac{\\lambda}{2} {||w_i||}_2$\n",
     "\n",
     "同样求导且在$w_i=0$处不可微:\n",
