--- a/4-4 Softmax(Theory).ipynb
+++ b/4-4 Softmax(Theory).ipynb
@@ -69,13 +69,16 @@
     "\n",
     "$P(Y=C|X)=(0,0,0...C)_{C}$\n",
     "\n",
-    "所以似然函数为:\n",
+    "所以单个样本的似然函数为:\n",
     "\n",
-    "$\\prod P(Y=c|X)= \\prod [\\hat{y_i}]^{y_i}$\n",
+    "$P(Y_i,X_i)= \\prod_{c=1}^{C} [\\hat{y_i}]^{y_i}$\n",
     "\n",
-    "对数形式:\n",
+    "那么整体的样本似然函数为:\n",
+    "$P(X,Y)=\\prod_{i=1}^{N}P(Y_i,X_i)=\\prod_{i=1}^{N} \\prod_{c=1}^{C} [\\hat{y_i}]^{y_i}$\n",
     "\n",
-    "$logP(Y=c|X)=\\sum_{i=1}^{N}y_ilog\\hat{y_i}$"
+    "对数形式(每一项只有一个$c$类起作用,所以$\\sum_{c=1}^{C}$可以去掉):\n",
+    "\n",
+    "$L(\\theta)=logP(Y,X)=\\sum_{i=1}^{N}y_ilog\\hat{y_i},\\theta:W,b$"
    ]
   },
   {
@@ -106,9 +109,14 @@
     "\n",
     "假设现在我们的标签有4类,那么:\n",
     "\n",
-    "$a=\\sigma(z)=\\frac{exp(z_i)}{exp(z_1)+exp(z_2)+exp(z_3)+exp(z_4)}$\n",
+    "$a_j$就可能有4种情况即为$a_j,j=1,2,3,4$\n",
     "\n",
-    "很明显,我们对其中一个$z_i$进行求导的话,会发现分母部分会有与$i$项无关的情况,所以我们将$a$对$z$求导分为两个部分:\n",
+    "\n",
+    "所以\n",
+    "\n",
+    "$a_j=\\sigma(z_j)=\\frac{exp(z_j)}{exp(z_1)+...+exp(z_i)+exp(z_4)}$,也就是说我们需要分别让$a_j$不同的情况对于$z$进行求导才是整体的$a$对$z$进行求导.\n",
+    "\n",
+    "我们将$a$对$z$求导分为两个部分:\n",
     "\n",
     "(1) 当$i=j$:\n",
     "\n",
@@ -134,9 +142,11 @@
     "\n",
     "$\\frac{\\partial L}{\\partial z}= \\frac{\\partial L}{\\partial a}\\frac{\\partial a}{\\partial z}$ \n",
     "\n",
-    "$= -\\sum_j \\frac{y_j}{a_j}\\cdot \\frac{\\partial a_j}{\\partial z_j}-\\sum_i \\frac{y_i}{a_i}\\cdot \\frac{\\partial a_i}{\\partial z_i}$\n",
     "\n",
-    "$=-\\sum_i \\frac{y_i}{a_i}a_i(1-a_i) + \\sum_{i\\neq j}\\frac{y_j}{a_j}a_ia_j = -\\sum_iy_i + \\sum_iy_ia_i+a_i\\sum_{i \\neq j} y_j$\n",
+    "\n",
+    "$=-\\sum_i \\frac{y_i}{a_i}a_i(1-a_i) + \\sum_{i\\neq j}\\frac{y_j}{a_j}a_ia_j $\n",
+    "\n",
+    "$ = -\\sum_iy_i + \\sum_iy_ia_i+a_i\\sum_{i \\neq j} y_j$\n",
     "\n",
     "$ = -\\sum_i y_i + a_i \\sum y$ \n",
     "\n",
@@ -173,11 +183,11 @@
     " 0&1  &...  &0 \\\\ \n",
     "... & ... & ... &... \\\\ \n",
     " 0&0  &...  & 1\n",
-    "\\end{bmatrix}_{C,N}$,即对应的类别为1,其余为0.初始化$W,b$\n",
+    "\\end{bmatrix}_{C,N}$,即对应的类别为1,其余为0.初始化$W,b$,其中$W$的形状为(classes,n)\n",
     "\n",
-    "(2) 计算线性值$Z=WX+b$\n",
+    "(2) 计算线性值$Z=WX+b$,计算出来的线性值应该会有classes类.\n",
     "\n",
-    "(3) 计算预测值$A=softmax(Z)$\n",
+    "(3) 计算预测值$A=softmax(Z)$,也会有classes类.\n",
     "\n",
     "(4) 计算损失函数$loss(w,b)= -\\frac{1}{m}\\cdot \\sum_{i=1}^{m}y_ilog\\hat{y_i}$\n",
     "\n",
@@ -201,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "假设单个样本的线性回归计算完后的$Z$如下所示:\n",
+    "假设单个样本有4中可能标签,则线性回归计算完后的$Z$如下所示:\n",
     "\n",
     "$Z = \\begin{bmatrix}\n",
     "5\\\\ \n",
