--- a/5-1Support vector machines(Theory).ipynb
+++ b/5-1Support vector machines(Theory).ipynb
@@ -183,8 +183,8 @@
     "那么现在我们将SVM要做什么更改成数学的语言\n",
     "#### 3.最大间隔分类器\n",
     "- 由于超平面具有不适定性,所以为了寻找到最好的超平面,我们需要使用几何距离来衡量点到超平面之间的距离,目的是为了找到支持向量\n",
-    "- 一组向本中,将点到超平面距离最近的点的距离,作为样本到超平面的距\n",
-    "- 最大化这个距,才能最好的将样本分开\n",
+    "- 一组向本中,将点到超平面距离最近的点的距离,作为样本到超平面的距(使用的是函数间隔)\n",
+    "- 最大化这个距,才能最好的将样本分开(使用的是几何距离)\n",
     "\n",
     "![](picture/20.png)\n",
     "\n",
@@ -195,7 +195,10 @@
     "\n",
     "$\\tilde{r}$ 可以考虑成支持向量,也就是距离超平面最短的点,那么其他的点距离这个超平面的距离一定要大于等于这个$\\tilde{r}$\n",
     "\n",
-    "### $max r=max\\frac{\\tilde{r}}{||W^{T}||}$"
+    "\n",
+    "### $max r=max\\frac{\\tilde{r}}{||W^{T}||}$\n",
+    "\n",
+    "也就是说使用几何距离来度量支持向量到超平面的距离,并且要使其足够大."
    ]
   },
   {
@@ -219,12 +222,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "那么 $max\\frac{1}{||W^{T}||}$ ,求$max\\frac{1}{||W^{T}||}$的最大值相当于求$\\frac{1}{||W^{T}||}的最小值$,也就等价于$\\frac{1}{2}||W^{T}||^{2}$，这里的$\\frac{1}{2}和^2$只是为了计算方便，并不改变$||W||$的取值方向.\n",
+    "那么 $max\\frac{1}{||W^{T}||}$ ,求$max\\frac{1}{||W^{T}||}$的最大值相当于求$||W^{T}||的最小值$,也就等价于$\\frac{1}{2}||W^{T}||^{2}$，这里的$\\frac{1}{2}和^2$只是为了计算方便，并不改变$||W||$的取值方向.\n",
     "\n",
     "那么最终问题等价于:\n",
     "## $min \\frac{1}{2}||W^{T}||^2$\n",
     "s.t. $y_i(W^{T}x_i+b)\\geqslant 1,i=1,2..,n$\n",
     "\n",
+    "最大间隔分类器的意思是:\n",
+    "\n",
+    "(1) 使用函数间隔来找到支持向量\n",
+    "\n",
+    "(2) 使用几何间隔来度量支持向量到超平面的距离,使其极大.即最能把样本分开.\n",
     "\n",
     "下面就是如何求解这个最小值了"
    ]
@@ -294,13 +302,17 @@
     "\n",
     "$\\underset{w,b}{min}C(w)=\\underset{w,b}{min} \\underset{a_i>0}{max}F(w,b,a)=P^{*}$\n",
     "\n",
-    "实际上这个问题还是很难解决,因为我们要解决不等式约束的max问题,然后再在w,b上求最小值.回到我们最初的问题:求最大几何间距的问题就是求出一组数据最优的w,b。所以我们可以先求w,b再求最大的a_i是一个不错的选择.即\n",
+    "实际上这个问题还是很难解决,因为$a_i$是一个不等式,回到我们最初的问题:求最大几何间距的问题就是求出一组数据最优的w,b。所以我们可以先求w,b再求最大的$a_i$是一个不错的选择.即\n",
     "\n",
     "$ \\underset{a_i>0}{max}\\underset{w,b}{min}F(w,b,a)=d^{*}$\n",
     "\n",
     "那么$d^{*}$就是$p^{*}$的对偶形式,但是这两者未必相等,实际上他们的关系是\n",
     "\n",
     "$d^* \\leq P^*$\n",
+    "\n",
+    "**Ps:**\n",
+    "\n",
+    "[从放弃到再入门之拉格朗日对偶问题推导](https://blog.csdn.net/qq_34564612/article/details/79974635)\n",
     "\n",
     "这个叫做\"弱对偶性质(week duality)\",意思是最大值中的最小值也要比最小值中的最大值要大.以常识的理解也是可以理解的(也就是$P^{*}min >= d^{*}max$).同时也会产生一个**对偶间隙**$P^{*}-d^{*}$\n",
     "\n",
@@ -326,13 +338,17 @@
     "个人认为这个KKT条件是真的恶心.\n",
     "\n",
     "- KKT(F(w,b,a)对w,b都可微):\n",
-    "    - 如果对应的拉格朗日函数为:$L(x,\\mu_1\\mu_2)=f(x)+\\mu_1g_1(x)\\mu_2g_2(x)$\n",
+    "    - 如果对应的拉格朗日函数为:$L(x,\\mu_1\\mu_2)=f(x)+\\mu_1g_1(x)+\\mu_2g_2(x)$\n",
     "    - 则KKT条件(具有局部最优点的必要条件)是:\n",
     "        - 1.$\\mu_1\\geqslant 0,\\mu_2\\geqslant 0$\n",
     "        - 2.$\\triangledown f(x)+\\mu_1\\triangledown g_1(x)+\\mu_2\\triangledown g_2(x)=0$,$\\triangledown $称作梯度\n",
     "        - 3.$\\mu_1g(x)+\\mu_2g(x)=0$\n",
     "\n",
-    "只要满足上面两个条件,$P^{*}=d^{*}$的解即为最优条件"
+    "只要满足上面两个条件,$P^{*}=d^{*}$的解即为最优条件\n",
+    "\n",
+    "**Ps:**\n",
+    "\n",
+    "[对偶问题](http://www.dgt-factory.com/uploads/2018/07/0725/Ch5%20%E5%AF%B9%E5%81%B6%E9%97%AE%E9%A2%98.pdf)"
    ]
   },
   {
@@ -429,9 +445,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 如果$x_i$是支持向量,那么根据我们之前定义的几何函数间隔为1(也就是支持向量与超平面的几何函数间隔),$y_i(W^{T}x_i+b)=1$,$a_i$是一个非0的数,故支持向量的点被纳入模型中(也就是说$<X_i,X>$会进行运算),进行新点的分类预测\n",
+    "- 如果$x_i$是支持向量,那么根据我们之前定义的函数间隔为1(也就是支持向量与超平面的函数间隔),$y_i(W^{T}x_i+b)=1$,$a_i$是一个非0的数,故支持向量的点被纳入模型中(也就是说$<X_i,X>$会进行运算),进行新点的分类预测\n",
     "\n",
-    "- 如果$x_i$是不支持向量那么$y_i(W^{T}x_i+b)>1$,这是显然的,因为其他非支持向量点到超平面的距离都要比支持向量点到超平面的距离大.那么在预测新点x时,由于$a_i$非负，为了满足最大化,$a_i$必须是0,那么在模型$f(x)=\\sum_{i=1}^{n}a_iy_i<X_i,X>+b$中由于$a_i$为0,所以后面部分为0,不纳入计算\n"
+    "- 如果$x_i$是不支持向量那么$y_i(W^{T}x_i+b)>1$,这是显然的,因为其他非支持向量点到超平面的距离都要比支持向量点到超平面的距离大.那么在预测新点x时,由于$a_i$非负，为了满足最大化,$a_i$必须是0,那么在模型$f(x)=\\sum_{i=1}^{n}a_iy_i<X_i,X>+b$中由于$a_i$为0,所以后面部分为0,不纳入计算\n",
+    "\n",
+    "- 此步主要是看$a_i$是否为0.\n"
    ]
   },
   {
@@ -454,7 +472,7 @@
     "\n",
     "那么我们用的这个曲线的数学形式的超平面就应该是\n",
     "\n",
-    "$f(x)=w_0x^{2}+w_1x+w_3C+b = W^{T}\\begin{bmatrix}x^{2}\\\\ x\\\\ c\\end{bmatrix}+b=W^{T}H(x)+b$\n",
+    "$f(x)=w_1x^{2}+w_2x+w_3C+b = W^{T}\\begin{bmatrix}x^{2}\\\\ x\\\\ C\\end{bmatrix}+b=W^{T}H(x)+b$\n",
     "\n",
     "很明显这样的话我们将原来的一维x映射到了三维$(x^2,x,C)$上,也就能顺利的解决这种线性不可分的问题了,\n",
     "\n",
@@ -467,15 +485,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "那么像这样我们就解决了再一维情况下不可分,我们可以将数据投射向高维情况进行划分,但是这样在维度不高的情况下是可行的,但是一旦特征很多,就会产生一个东西叫做**维数灾难**.\n",
+    "**Ps:**\n",
     "\n",
-    "我们来看看什么叫维数灾难:\n",
+    "[支持向量机通俗导论](https://blog.csdn.net/v_july_v/article/details/7624837)\n",
+    "\n",
+    "这里面的核函数部分讲解了,当数据在二维情况下不可使用线性划分的时候,可以将其映射到更高维度(五维),这样就能够进行线性划分.\n",
+    "\n",
+    "$a_1x_1+a_2x_1^{2}+a_3x_2+a_4x_2^{2}+a_5x_1x_2=0$\n",
+    "\n",
+    "使用$Z_1=x_1,Z_2=x_1^{2},Z_3=x_2,Z_4=x_2^{2},Z_5=x_1x_2$\n",
+    "\n",
+    "即:\n",
+    "\n",
+    "$\\sum_{i=1}^{5}Z_i + b$\n",
+    "\n",
+    "也就是5维上的超平面形式.(将原来的2维映射到5维)\n",
+    "\n",
+    "因为上诉5维我们无法画出,故可以将其转换为3维(多元二次函数划分数据)\n",
+    "\n",
+    "令$Z_1=x_1,Z_2=x_2,Z_3=x_1x_2$.(这里和原博客的令值方式不同,但是结果是一样的.)\n",
+    "\n",
+    "即:\n",
+    "\n",
+    "$a_1Z_1+a_2Z_1^{2}+a_3Z_2+a_4Z_2^{2}+a_5Z_3=0$\n",
+    "\n",
+    "也就是3维上的超平面形式.(将原来的2维映射到3维)\n",
+    "\n",
+    "这样就能绘制出从二维$x_1,x_2$转换为三维$Z_1,Z_2,Z_3$的形式.\n",
+    "\n",
+    "那么将上诉形式简单化处理后得到的超平面为:\n",
+    "\n",
+    "<img src=\"picture/68.png\" width=300 height=300>\n",
+    "\n",
+    "即可以考虑为红色的点在超平面的内部,蓝色的点在超平面的外部.\n",
+    "\n",
+    "[对多元二次函数的理解](https://blog.csdn.net/shenbo2030/article/details/17763395)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "------------\n",
+    "像上诉博客中的例子,如果我们需要使用高纬度下进行划分:\n",
+    "\n",
+    "(1) 如果原始特征是2,那么要用线性划分需要增加到5维,\n",
+    "\n",
+    "(2) 如果原始空间是三维(一阶、二阶和三阶的组合),那么我们会得到:3(一次)+3(二次交叉)+3(平方)+3(立方)+1(x1*x2*x3)+2*3(交叉,一个一次一个二次,类似x1*x2^2) = 19维的新空间.这个数目是呈指数级爆炸性增长的，从而势必这给的计算带来非常大的困难，而且如果遇到无穷维的情况，就根本无从计算了.\n",
+    "\n",
+    "\n",
+    "维数灾难:\n",
     "\n",
     "维数灾难（英语：curseof dimensionality，又名维度的诅咒）是一个最早由理查德·贝尔曼(Richard E. Bellman)在考虑动态优化问题时首次提出来的术语，用来描述当（数学）空间维度增加时，分析和组织高维空间（通常有成百上千维），因体积指数增加而遇到各种问题场景。这样的难题在低维空间中不会遇到，如物理空间通常只用三维来建模。\n",
     "\n",
     "数据的维数越高，会引发灾难，首先是计算量巨大，不用多说。其次，对于已知样本数目，存在一个特征数目的最大值，当实际使用的特征数目超过这个最大值时，分类器的性能不是得到改善，而是退化。因为在高维空间中，所有的数据都很稀疏，于是导致在相似度度量上，距离计算上都会出现很大的偏差，因为平时我们采用的算法也都会变得很低效。因此，多于多维数据，我们通常采用降维处理（[主成分分析](https://scikit-learn.org/stable/modules/decomposition.html#decompositions)）\n",
     "\n",
-    "正是由于维数灾难的存在,所以SVM使用一种技术叫做(核函数),我靠到这里才开始讲核函数,崩溃"
+    "正是由于维数灾难的存在,所以SVM使用一种技术叫做(核函数)\n",
+    "\n",
+    "------------"
    ]
   },
   {
@@ -484,14 +551,17 @@
    "source": [
     "### 2.核函数\n",
     "\n",
-    "核函数在计算的时候,它可以让x和y不用通过H()映射到高维空间再计算内积,而是直接在低维下计算\n",
+    "核函数在计算的时候,它可以让x和y不用通过H(.)映射到高维空间再计算内积,而是直接在低维下计算\n",
     "\n",
     "我们用K()表示核函数,那么核函数的作用就是:\n",
     "\n",
     "$K(x,y)=<H(x),H(y)>$,从而避开了x映射到H(x)和y映射到H(y)的过程\n",
     "\n",
     "我们来举个例子:形式如以下\n",
-    "$X=\\begin{pmatrix}x_1\\\\ x_2\\end{pmatrix}$,那么$H(x)=\\begin{pmatrix}x^2\\\\ x\\\\ c\\end{pmatrix}$"
+    "\n",
+    "$X=\\begin{pmatrix}x_1\\\\ x_2\\end{pmatrix}$,那么$H(x)=\\begin{pmatrix}x^2\\\\ x\\\\ c\\end{pmatrix}$\n",
+    "\n",
+    "$Y=\\begin{pmatrix}y_1\\\\ y_2\\end{pmatrix}$,那么$H(Y)=\\begin{pmatrix}y^2\\\\ y\\\\ c\\end{pmatrix}$"
    ]
   },
   {
@@ -556,7 +626,7 @@
    "source": [
     "**高斯核函数:**\n",
     "\n",
-    "高斯核函数可以将原始空间映射为无穷维的空间上.不过如果$\\sigma$选的很大,那么高次特征上的权重实际上衰减的很快,所以实际上就相当于一个低微的子空间;反过来如果$\\sigma$选的很小,则可以在任意的数据映射为线性可分(也就是将数据分到更高维下进行超平面的划分),当然这也不是好事,因为随之而来的就是维数灾难,或者叫做严重过拟合问题。所以总的来说调整好参数$\\sigma$非常重要(来自于v_JULY_v的博客).\n",
+    "高斯核函数可以将原始空间映射为无穷维的空间上.不过如果$\\sigma$选的很大,那么高次特征上的权重实际上衰减的很快,所以实际上就相当于一个低维的子空间;反过来如果$\\sigma$选的很小,则可以在任意的数据映射为线性可分(也就是将数据分到更高维下进行超平面的划分),也就是说$\\sigma$越小,核函数作用越大,维度越高.当然这也不是好事,因为随之而来的就是维数灾难,或者叫做严重过拟合问题.所以总的来说调整好参数$\\sigma$非常重要(来自于v_JULY_v的博客).\n",
     "![](picture/24.png)\n"
    ]
   },
@@ -616,7 +686,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "其中$\\xi_i$就是松弛变量(slack variable),因为我们上述说到最近的距离也就是支持向量与超平面的距离假设为1，也就是说现在的假设最短距离就是1了，如果比1还小,那么就是跳到另一类中了.所以我们应该允许数据点$x_i$偏离一点超平面(函数间隔).当然$\\xi_i \\geqslant 0$."
+    "其中$\\xi_i$就是松弛变量(slack variable),当某些点出现这种间隔比1小的情况时(这些点也叫离群点),意味着我们放弃了对这些点的精确分类(因为我们的精准分类是函数间隔为1).当然$\\xi_i \\geqslant 0$."
    ]
   },
   {
@@ -631,7 +701,16 @@
     "\n",
     "$\\xi_i \\geqslant 0,i=1,...n$\n",
     "\n",
-    "其中C是一个参数,是一个惩罚项用于控制目标函数中两项(寻找间隔最大的超平面和保证数据点偏差量最小)之间的权重.注意其中$\\xi$是需要优化的变量,而C是事先给定的一个常量"
+    "\n",
+    "**Ps:**\n",
+    "\n",
+    "(1) 并非所有的样本点都有一个松弛变量与其对应.实际上只有\"离群点\"才有,或者也可以这么看,所有没离群的点松弛变量都等于0.\n",
+    "\n",
+    "(2) 松弛变量的值实际上标示出了对应的点到底离群有多远,值越大,点就越远.\n",
+    "\n",
+    "(3) 惩罚因子C决定了你有多重视离群点带来的损失,显然当所有离群点的松弛变量的和一定时,你定的C越大,对目标函数的损失也越大,此时就暗示着你非常不愿意放弃这些离群点,最极端的情况是你把C定为无限大,这样只要稍有一个点离群,目标函数的值马上变成无限大,马上让问题变成无解.\n",
+    "\n",
+    "(4) C是一个参数,是一个惩罚项用于控制目标函数中两项(寻找间隔最大的超平面和保证数据点偏差量最小)之间的权重.注意其中$\\xi$是需要优化的变量,而C是事先给定的一个常量."
    ]
   },
   {
