--- a/4-2 Logistic Regression(Theory02).ipynb
+++ b/4-2 Logistic Regression(Theory02).ipynb
@@ -204,7 +204,7 @@
     "\n",
     "所以最后的参数更新就变为了:\n",
     "\n",
-    "$w := w-\\alpha(dw+\\lambda sgn(w_i))=w-\\alpha \\lambda sgn(w_i) -\\alpha dw$\n",
+    "$w := w-\\alpha(dw+\\frac{\\lambda}{m} sgn(w_i))=w-\\alpha \\frac{\\lambda}{m} sgn(w_i) -\\alpha dw$\n",
     "\n",
     "\n",
     "式子中$\\alpha dw$我们无需理会,这是Theory01的内容,与我们现在的分析无关.\n",
@@ -244,7 +244,7 @@
     "\n",
     "更新参数的形式为:\n",
     "\n",
-    "$w := w-\\alpha(dw+\\lambda \\cdot w_i)=w-\\alpha \\lambda \\cdot w_i -\\alpha dw$\n",
+    "$w := w-\\alpha(dw+\\frac{\\lambda}{m} \\cdot w_i)=w-\\alpha \\frac{\\lambda}{m} \\cdot w_i -\\alpha dw$\n",
     "\n",
     "\n",
     "同样考虑:\n",
@@ -336,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
