--- a/6-AdaBoost.ipynb
+++ b/6-AdaBoost.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "(1) 初始化训练数据的权重值分布(在初始化的时候将所有样本的权重赋予相同值)\n",
     "\n",
-    "$D_1=(w_{11},w_{12},...w_{1i},w_{1N}),w_1i = \\frac{1}{N},i=1,2,...N$\n",
+    "$D_1=(w_{11},w_{12},...w_{1i},w_{1N}),w_{1i} = \\frac{1}{N},i=1,2,...N$\n",
     "\n",
     "(2) 对$m=1,2,...,M$(需要执行人为定义的M轮)\n",
     "\n",
