--- a/4-2 Logistic Regression(Theory02).ipynb
+++ b/4-2 Logistic Regression(Theory02).ipynb
@@ -193,7 +193,7 @@
     "\n",
     "LR loss(single sample):\n",
     "\n",
-    "$loss(w,b) = -[y_ilog(\\hat{y_i})+(1-y_i)log(1-\\hat{y_i})] + \\lambda {||w_i||}_1$"
+    "### $loss(w,b) = \\frac{-[y_ilog(\\hat{y_i})+(1-y_i)log(1-\\hat{y_i}] + \\lambda {||w_i||}_1)}{m}$"
    ]
   },
   {
@@ -209,7 +209,7 @@
     "\n",
     "式子中$\\alpha dw$我们无需理会,这是Theory01的内容,与我们现在的分析无关.\n",
     "\n",
-    "那么实际上$w$的是否会稀疏只与$w- \\alpha \\lambda sgn(w_i)$有关.\n",
+    "那么实际上$w$的是否会稀疏只与$w- \\alpha \\frac{\\lambda}{m} sgn(w_i)$有关.\n",
     "\n",
     "由于对于$w_i$的求导可能产生两种结果(这里不考虑$w_i=0$的情况,实际上$w_i$很少很少会是0):\n",
     "\n",
@@ -225,7 +225,9 @@
     "\n",
     "- 对于$L_1$范数更规范的说法是:\n",
     "    - 它是L0范数的最优凸近似\n",
-    "    - 任何的规则化算子,如果他在$W_i=0$的地方不可微(也就是$w_i\\neq 0$),并且可以分解为一个\"求和\"的形式,那么这个规则化算子就可以实现稀疏.\n"
+    "    - 任何的规则化算子,如果他在$W_i=0$的地方不可微(也就是$w_i\\neq 0$),并且可以分解为一个\"求和\"的形式,那么这个规则化算子就可以实现稀疏.\n",
+    "\n",
+    "- $m$:为样本数量\n"
    ]
   },
   {
@@ -236,9 +238,9 @@
     "\n",
     "LR loss(single sample):\n",
     "\n",
-    "这里我们为了处理方便将$L_2$范数取平方(平方并不更改几何形状)即:$||w_i||_{2}=(||w_i||_{2}^\\frac{1}{2})^2$\n",
+    "这里我们为了处理方便将$L_2$范数取平方(平方并不更改几何形状)即:$||w_i||^{2}_{2}=(||w_i||_{2}^\\frac{1}{2})^2$\n",
     "\n",
-    "$loss(w,b) = -[y_ilog(\\hat{y_i})+(1-y_i)log(1-\\hat{y_i})] + \\frac{\\lambda}{2} {||w_i||}_2$\n",
+    "### $loss(w,b) = \\frac{-[y_ilog(\\hat{y_i})+(1-y_i)log(1-\\hat{y_i})]}{m} + \\frac{\\lambda}{2m} {||w_i||}^{2}_2$\n",
     "\n",
     "同样求导且在$w_i=0$处不可微:\n",
     "\n",
