--- a/4-1 Logistic Regression(Theory01).ipynb
+++ b/4-1 Logistic Regression(Theory01).ipynb
@@ -158,7 +158,7 @@
    "source": [
     "那么对数似然函数即为:\n",
     "\n",
-    "$L(W,b) = \\sum_{i=1}^{N}[y_ilog(\\hat{y_i})+(1-y_i)log(1-\\hat{y})]$"
+    "$L(W,b) = \\sum_{i=1}^{N}[y_ilog(\\hat{y_i})+(1-y_i)log(1-\\hat{y_i})]$"
    ]
   },
   {
@@ -732,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
