--- a/7-2Gaussian Mixture(Theory).ipynb
+++ b/7-2Gaussian Mixture(Theory).ipynb
@@ -166,7 +166,7 @@
     "    \n",
     "- <p style=\"color:orange\">加入隐变量的前提是不能改变其边缘分布</p>\n",
     "\n",
-    "    - $P(x_i)=\\int_{z_i}P(x_i|z_i)P(z_i)d_z$,也就是说加入变量后,积分能够积掉,使其不改变边缘概率.\n",
+    "    - $P(x_i)=\\int_{z_i}P(x_i|z_i)P(z_i)d_z=\\int_{z_i}P(z_i|x_i)d_z$,也就是说加入变量后,积分能够积掉,使其不改变边缘概率.(△)\n",
     "    - 比如在高斯模型中$P(x_i)$的边缘概率:\n",
     "    \n",
     "    $P(x_i)=\\int_{z_i}\\underset{N(x_i|\\mu_{z_i},\\Sigma_{z_i})} {\\underbrace{P(x_i|z_i)}} \\underset{\\alpha_{z_i}}{\\underbrace{P(z_i|\\theta)d_{z_i}}}=\\sum_{z_i=1}^{K}\\alpha_{z_i}N(x_i|\\mu_{z_i},\\Sigma_{z_i})$,结果和原始的高斯分布没有区别,所以不会改变$x_i$的边缘分布.这里的$\\int$变为$\\sum$是因为$z_i$是离散的.\n",
@@ -230,7 +230,7 @@
     "\n",
     "$E(X)=\\underset{i}{\\sum}x_ip_i$\n",
     "\n",
-    "$p_i$是权值(概率),满足条件:$1. 1\\geqslant p_i\\geqslant 0,\\underset{i}{\\sum}=1$\n",
+    "$p_i$是权值(概率),满足条件:$1. 1\\geqslant p_i\\geqslant 0,\\underset{i}{\\sum}p_i=1$\n",
     "\n",
     "若连续型随机变量X的概率密度函数为$f(x)$,则数学期望$E(x)$为:\n",
     "\n",
@@ -255,7 +255,7 @@
     "\n",
     "$E[f(x)]\\geqslant f(E[x])$\n",
     "\n",
-    "其中,$E[f(x)]=0.5f(a)+0.5f(b),f(E(x))=f(0.5a+0.5b),这里a和b的权值为0.5.$f(a)$与a权值相等,$f(b)$与b的权值相等.\n",
+    "其中,$E[f(x)]=0.5f(a)+0.5f(b)=0.5(f(a)+f(b)),f(E(x))=f(0.5a+0.5b)=f(0.5(a+b))$,这里a和b的权值为0.5,$f(a)$与a权值相等,$f(b)$与b的权值相等.\n",
     "\n",
     "特别的,如果函数$f$是严格凸函数,当且仅当:$p(x=E(x))=1$(即随机变量是常量)时等号成立.\n",
     "\n",
@@ -320,17 +320,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "我们知道Jensen不等式:\n",
+    "我们知道Jensen不等式(凸函数):\n",
     "\n",
     "$E[f(x)]\\geqslant f(E(x))$\n",
     "\n",
-    "那么对于$P(X)$是$P(X,Z)$的[边缘概率](https://zh.wikipedia.org/wiki/%E8%BE%B9%E7%BC%98%E5%88%86%E5%B8%83),我们有:\n",
+    "也就是:\n",
     "\n",
-    "$P(X)=\\frac{P(X,Z)}{P(Z|X)}$\n",
-    "\n",
-    "所以$P(X)$的期望就为:\n",
-    "\n",
-    "$E(P(X))=E(\\frac{P(X,Z)}{P(Z|X)})$\n",
+    "$\\sum_{j}\\lambda_{j}f(x_j) \\geqslant f(\\sum_{j}\\lambda_{j} x_j)$,其中$\\lambda_{j}>0,\\sum_{j}\\lambda_{j}=1$\n",
     "\n"
    ]
   },
@@ -338,14 +334,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "因为$\\underset{z}{\\sum}P(z|X,\\theta_n)=1$(加入的隐变量不能改变边缘概率,所以积分或者求和后要等于1),所以对于$L(\\theta)-L(\\theta_{n})$的第一项等价变形以及Jensen不等式有:"
+    "因为$\\underset{z}{\\sum}P(z|X,\\theta_n)=1$(加入的隐变量不能改变边缘概率,所以积分或者求和后要等于1,可以回顾(△)部分),所以对于$L(\\theta)-L(\\theta_{n})$的第一项等价变形以及Jensen不等式有:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$ln(\\underset{z}{\\sum}P(z|\\theta)P(X|z,\\theta))=\\underset{f(E(X))}{ \\underbrace {ln(\\underset{z}{\\sum}P(z|X,\\theta_n)\\cdot \\underset{E(X)}{ \\underbrace{\\frac{P(z|\\theta)P(X|z,\\theta)}{P(z|X,\\theta_n)}}})} }\\geqslant \\underset{E(f(X))}{ \\underbrace{  \\underset{z}{\\sum}P(z|X,\\theta_n) ln(\\underset{E(X)}{\\underbrace{\\frac{P(z|\\theta)P(X|z,\\theta)}{P(z|X,\\theta_n)}}})}}$"
+    "$ln(\\underset{z}{\\sum}P(z|\\theta)P(X|z,\\theta))=\\underset{f(E(X))}{ \\underbrace {ln(\\underset{z}{\\sum}P(z|X,\\theta_n)\\cdot \\frac{P(z|\\theta)P(X|z,\\theta)}{P(z|X,\\theta_n)}}}) \\geqslant \\underset{E(f(X))}{ \\underbrace{  \\underset{z}{\\sum}P(z|X,\\theta_n) ln(\\frac{P(z|\\theta)P(X|z,\\theta)}{P(z|X,\\theta_n)}}})$"
    ]
   },
   {
@@ -364,7 +360,7 @@
    "source": [
     "第二项有:\n",
     "\n",
-    "$−lnP(X|θ_n)=−∑zP(z|X,θ_n)\\cdot lnP(X|θ_n)$"
+    "$−lnP(X|θ_n)=−∑_zP(z|X,θ_n)\\cdot lnP(X|θ_n)$"
    ]
   },
   {
@@ -693,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
