--- a/7-3Gaussian Mixture Model(Application).ipynb
+++ b/7-3Gaussian Mixture Model(Application).ipynb
@@ -10,9 +10,9 @@
     "\n",
     "- [多元正态分布](https://zh.wikipedia.org/wiki/%E5%A4%9A%E5%85%83%E6%AD%A3%E6%80%81%E5%88%86%E5%B8%83)\n",
     "\n",
-    "- 在理论上多元正态分布的参数$\\Sigma$是需要半正定和非奇异的,但是由于EM是迭代算法,所以在迭代的过程中可能会产生一些奇异的矩阵,所以我们在使用[multivariate_normal](https://docs.scipy.org/doc/numpy-1.15.1/reference/generated/numpy.random.multivariate_normal.html)计算多元正态分布的时候我们需要调节参数\n",
+    "- 在理论上多元正态分布的参数$\\Sigma$是需要半正定和[非奇异](https://www.zhihu.com/question/35318893)的,但是由于EM是迭代算法,所以在迭代的过程中可能会产生一些奇异的矩阵,所以我们在使用[multivariate_normal](https://docs.scipy.org/doc/numpy-1.15.1/reference/generated/numpy.random.multivariate_normal.html)计算多元正态分布的时候我们需要调节参数\n",
     "    - allow_singular=True\n",
-    "- 参数$\\Sigma$必须要是半正定的."
+    "- 参数$\\Sigma$必须要是[半正定](https://blog.csdn.net/you1314520me/article/details/78856322#_63)的."
    ]
   },
   {
@@ -453,7 +453,7 @@
     "\n",
     "M-step负责更新参数,需要注意的是:\n",
     "\n",
-    "在更新$\\Sigma$的时候需要使用外积[np.outer](https://docs.scipy.org/doc/numpy-1.14.0/reference/generated/numpy.outer.html)计算,这样的出来的结果才是半正定的,另外不能保证$\\Sigma$非奇异,原因开始的时候已经说明.\n",
+    "在更新$\\Sigma$的时候需要使用外积[np.outer](https://docs.scipy.org/doc/numpy-1.14.0/reference/generated/numpy.outer.html)计算,这样的出来的结果才是对称的,另外不能保证$\\Sigma$非奇异,原因开始的时候已经说明.\n",
     "\n",
     "在取出gamma中的值计算的时候,由于Numpy的影响,我们需要增加一个维度np.newaxis来使得两个向量可以计算.\n",
     "\n",
@@ -854,7 +854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
