--- a/7-1EM.ipynb
+++ b/7-1EM.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "### 2 EM算法的引入\n",
     "\n",
-    "概率模型有时既有观测变量(observable variable),又含有隐变量(latent variable).如果概率模型的变量都是观测变量,那么给定数据,可以直接用极大似然估计发,或者贝叶斯估计模型参数.但是,当模型含有隐变量的时候就不能简单的使用极大似然估计.EM算法是含有隐变量的极大似然估计或极大后验概率估计."
+    "概率模型有时既有观测变量(observable variable),又含有隐变量(latent variable).如果概率模型的变量都是观测变量,那么给定数据,可以直接用极大似然估计法,或者贝叶斯估计模型参数.但是,当模型含有隐变量的时候就不能简单的使用极大似然估计.EM算法是含有隐变量的极大似然估计或极大后验概率估计."
    ]
   },
   {
@@ -103,7 +103,7 @@
     "$=P(z=1|\\theta)P(y_j|z=1,\\theta) + P(z=0|\\theta)P(y_j|z=0,\\theta)$\n",
     "\n",
     "$= \\left\\{\\begin{matrix}\n",
-    "\\pi p+(1-\\pi)q, &if y_i=1; \\\\ \n",
+    "\\pi p+(1-\\pi)q, &if y_j=1; \\\\ \n",
     " \\pi (1-p) + (1-\\pi)(1-q),& if y_j=0.\n",
     "\\end{matrix}\\right.$  ①\n",
     "\n",
@@ -183,7 +183,7 @@
    "metadata": {},
    "source": [
     "**Ps:**\n",
-    "上面②实际上是在求掷硬币A后的结果是正面也就是下次是掷硬币B的结果概率,那么就是掷硬币B的概率除上联合概率,③即使②的对立面."
+    "上面②实际上是在求掷硬币A后的结果是正面也就是下次是掷硬币B的结果概率,那么就是掷硬币B的概率除上联合概率,③即是②的对立面."
    ]
   },
   {
@@ -381,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
