--- a/7-2Gaussian Mixture(Theory).ipynb
+++ b/7-2Gaussian Mixture(Theory).ipynb
@@ -284,7 +284,7 @@
    "source": [
     "在GMM中,将观测数据$X=(x_1,x_2,...,x_N)$,不可观测数据(GMM中表示属不属于某一个k高斯模型)$Z=(z_1,z_2,...,z_N)$,将$X,Z$合在一起称为完全数据.那么**观测数据**的似然函数为:\n",
     "\n",
-    "$l(\\theta)=\\prod_{j=1}^{N}p(x_j|\\theta)=\\prod_{j=1}^{N}P(\\underset{z}{\\sum}P(z|\\theta)P(x_j|z,\\theta))$\n",
+    "$l(\\theta)=\\prod_{j=1}^{N}p(x_j|\\theta)=\\prod_{j=1}^{N}\\underset{z}{\\sum}P(z|\\theta)P(x_j|z,\\theta)$\n",
     "\n",
     "其中求和号表示对$z$的所有可能求和.\n",
     "\n",
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**EM算法是一种迭代算法,通过迭代的方法求取目标函数$L(\\theta)=lnP(X|\\theta)$的极大值.**因此,希望每一步迭代之后的目标函数会比上一步迭代之后的值要大.设当前第n次迭代后参数的取值为$\\theta_n$,我们的目标是使得$L(\\theta_{n+1} > L(\\theta))$."
+    "**EM算法是一种迭代算法,通过迭代的方法求取目标函数$L(\\theta)=lnP(X|\\theta)$的极大值.**因此,希望每一步迭代之后的目标函数会比上一步迭代之后的值要大.设当前第n次迭代后参数的取值为$\\theta_n$,我们的目标是使得$L(\\theta_{n+1}) > L(\\theta)$."
    ]
   },
   {
