--- a/7-1EM.ipynb
+++ b/7-1EM.ipynb
@@ -142,9 +142,9 @@
     "\n",
     "$P(z=1|y,\\theta)$ \n",
     "\n",
-    "$=\\frac{P(z=1,y_j|\\theta_n)}{\\underset{z}\\sum P(z=1,y_j|\\theta_n)}$ [Bayes](https://zh.wikipedia.org/wiki/%E8%B4%9D%E5%8F%B6%E6%96%AF%E5%AE%9A%E7%90%86)\n",
+    "$=\\frac{P(z=1,y_j|\\theta_n)}{\\underset{z}\\sum P(z,y_j|\\theta_n)}$ [Bayes](https://zh.wikipedia.org/wiki/%E8%B4%9D%E5%8F%B6%E6%96%AF%E5%AE%9A%E7%90%86)\n",
     "\n",
-    "$=\\frac{P(y_j|z=1,\\theta_n) P(z=1|\\theta_n)}{\\underset{z}\\sum P(y_j|z=1,\\theta_n) P(z=1|\\theta_n)}$ \n",
+    "$=\\frac{P(y_j|z=1,\\theta_n) P(z=1|\\theta_n)}{\\underset{z}\\sum P(y_j|z,\\theta_n) P(z|\\theta_n)}$ \n",
     "\n",
     "$\\Rightarrow $\n",
     "\n",
