--- a/7-2Gaussian Mixture(Theory).ipynb
+++ b/7-2Gaussian Mixture(Theory).ipynb
@@ -436,7 +436,7 @@
     "\n",
     "因为是寻找极大的$\\theta$,所以剔除与$\\theta$无关的变量,从而有:\n",
     "\n",
-    "$\\theta_{n+1}=\\underset{\\theta}{argmax}\\;l(\\theta|\\theta_n)\\doteq \\underset{\\theta}{argmax}\\; \\{L(\\theta_n)+\\underset{z}{\\sum}P(z|X,\\theta_n)ln\\frac{P(z|\\theta)P(X|z,\\theta)}{P(z|X,\\theta_n)P(X|\\theta)}\\}$\n",
+    "$\\theta_{n+1}=\\underset{\\theta}{argmax}\\;l(\\theta|\\theta_n)\\doteq \\underset{\\theta}{argmax}\\; \\{L(\\theta_n)+\\underset{z}{\\sum}P(z|X,\\theta_n)ln\\frac{P(z|\\theta)P(X|z,\\theta)}{P(z|X,\\theta_n)P(X|\\theta_n)}\\}$\n",
     "\n",
     "$=\\underset{\\theta}{argmax}\\;\\underset{z}{\\sum}P(z|X,\\theta_n)lnP(z|\\theta)P(X|z,\\theta) $\n",
     "\n",
