--- a/1-K nearest neighbor.ipynb
+++ b/1-K nearest neighbor.ipynb
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "在表中 **of kicks,of kisses**为特征(futures),**Type of movie**为标签(labels).\n",
+    "在表中 **of kicks,of kisses**为特征(features),**Type of movie**为标签(labels).\n",
     "\n",
     "**注意:**\n",
     "\n",
@@ -57,7 +57,7 @@
     "\n",
     "特征空间X是n维实数向量空间$R^n$,$x_i,x_j \\in X,x_i=(x_i^{(1)},x_i^{(2)},x_i^{(3)},...x_i^{(n)})^T,x_j=(x_j^{(1)},x_j^{(2)},x_j^{(3)},...x_j^{(n)})^T,x_i,x_j$的$L_p$距离定义为 \n",
     "\n",
-    "### $L_p(x_i,x_j)=(\\sum_{l=1}^{n}|x_i^{(l)}-x_j^{(l)}|^p)^P$"
+    "### $L_p(x_i,x_j)=(\\sum_{l=1}^{n}|x_i^{(l)}-x_j^{(l)}|^p)^\\frac{1}{P}$"
    ]
   },
   {
@@ -703,7 +703,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
